UI: Make sure code is never overlaid with the x-scroll bar
There was a way you could get the bottom horizontal scrollbar to overlay
the code in the editor. This makes sure there is always some space at
the bottom of the editor to make sure the code won't be obscured

--- a/ui-v2/app/styles/components/code-editor/index.scss
+++ b/ui-v2/app/styles/components/code-editor/index.scss
@@ -23,6 +23,8 @@ $syntax-yellow: $ui-yellow-500;
   max-width: 1150px;
   min-height: 300px;
   height: auto;
+  /* adds some space at the bottom of the editor for when a horizonal-scroll has appeared */
+  padding-bottom: 20px;
 }
 .CodeMirror-scroll {
   overflow-x: hidden !important;
